Fixed interactive circles on mobile a bit

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -103,7 +103,10 @@ pre {
 }
 
 
-
+.fill-page {
+width:100%; height:100%;
+    position:relative;
+}
 
 .fill-page > img {
   display: block;
